--- a/index.html
+++ b/index.html
@@ -179,19 +179,19 @@
             -->
             <ul class="contact-list list-unstyled">
               <li class="contact-item">
-                <a class="d-flex align-items-center" href="mailto:email@buas.nl" target="_blank">
+                <a class="d-flex align-items-center" href="mailto:220969@buas.nl" target="_blank">
                   <img class="contact-icon" src="images/icons/envelope.svg" alt="Email">
-                  email@buas.nl
+                  220969@buas.nl
                 </a>
               </li>
               <li class="contact-item">
-                <a class="d-flex align-items-center" href="https://facebook.com/" target="_blank">
-                  <img class="contact-icon" src="images/icons/facebook.svg" alt="Facebook">
-                  Facebook Profile
+                <a class="d-flex align-items-center" href="https://www.instagram.com/rogue_Is_goner/?hl=en" target="_blank">
+                  <img class="contact-icon" src="images/icons/instagram.svg" alt="Facebook">
+                  Instagram @Rogue
                 </a>
               </li>
               <li class="contact-item">
-                <a class="d-flex align-items-center" href="https://github.com/" target="_blank">
+                <a class="d-flex align-items-center" href="https://github.com/GitLaurens" target="_blank">
                   <img class="contact-icon" src="images/icons/github.svg" alt="LinkedIn">
                   GitHub Profile
                 </a>
@@ -199,7 +199,7 @@
               <li class="contact-item">
                 <a class="d-flex align-items-center" href="https://www.tiktok.com/@bredauniversityas" target="_blank">
                   <img class="contact-icon" src="images/icons/tiktok.svg" alt="Mobile Phone">
-                  TikTok @bredauniversityas
+                  +31 76 533 2323
                 </a>
               </li>
             </ul>
