--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                 </a>
               </li>
               <li class="contact-item">
-                <a class="d-flex align-items-center" href="https://www.tiktok.com/@bredauniversityas" target="_blank">
+                <a class="d-flex align-items-center" href="https://api.whatsapp.com/send?phone=31765332323&text=Song%20request:%20" target="_blank">
                   <img class="contact-icon" src="images/icons/tiktok.svg" alt="Mobile Phone">
                   +31 76 533 2323
                 </a>
