--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <!-- Links to the CSS styles from Bootstrap. -->
     <!-- -->
-    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
       
     <!--Link to the CSS style from google font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,6 +17,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Ojuju:wght@300&display=swap" rel="stylesheet">
     <!-- Links to our additional CSS styles -->
     <link rel="stylesheet" href="css/styles.css">
+<!--Link to the CSS style from google font -->
+
+    <style>
+    @import url('https://fonts.googleapis.com/css2?family=Ojuju&display=swap')
+    </style>
 
     <title>Anthony Laurens Veldkamp's Resumé</title>
   </head>
