--- a/index.html
+++ b/index.html
@@ -19,9 +19,7 @@
     <link rel="stylesheet" href="css/styles.css">
 <!--Link to the CSS style from google font -->
 
-    <style>
-    @import url('https://fonts.googleapis.com/css2?family=Ojuju&display=swap')
-    </style>
+
 
     <title>Anthony Laurens Veldkamp's Resumé</title>
   </head>
@@ -39,8 +37,8 @@
     <div class="container shadow-lg my-sm-4 resume-container">
 
       <!--
-        <header> is a semantic element: it works exactly like <div>, but it gives information about the role of the code below.
-        The "row" class is used for the Bootstrap grid.
+        <header> is a semantic elemengridt: it works exactly like <div>, but it gives information about the role of the code below.
+        The "row" class is used for the Bootstrap .
       -->
       <header class="row resume-header justify-content-center">
         <!--
@@ -58,7 +56,7 @@
           A container to wrap around your name and tagline. Full-width at small size, then columns of increasing size.
         -->
         <div class="col-12 col-sm-8 col-md-9 col-lg-10 my-3 header-content">
-          <h1 class="fw-bolder">Anthony Laurens Veldkamp</h1>
+          <h1 class="ojuju-title">Anthony Laurens Veldkamp</h1>
           <h5 class="fst-italic tagline">Creative Business Student</h5>
         </div>
       </header>
