--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         -->
         <div class="col-12 col-sm-8 col-md-9 col-lg-10 my-3 header-content">
           <h1 class="ojuju-title">Anthony Laurens Veldkamp</h1>
-          <h5 class="fst-italic tagline">Creative Business Student</h5>
+          <h5 class="ojuju-subtitle">Creative Business Student</h5>
         </div>
       </header>
 
@@ -76,7 +76,7 @@
           <!--
             <section> is yet another semantic element. The first one is for professional experience.
           -->
-          <section class="my-3 biography-section">
+          <section class="ojuju-header">
             <h2>Work Experience</h2>
             <!--
               Each list item (li) in the unordered list (ul) below will be one job.
@@ -127,7 +127,7 @@
 
           <section class="my-3 biography-section">
             <h2>Education</h2>
-            <ul class="biography-list list-unstyled">
+            <ul class="ojuju-header">
 
               <!-- Top item in education. And by "top", I mean a Bachelor in Creative Business at BUas. -->
               <li class="biography-item row mb-2">
