--- a/index.html
+++ b/index.html
@@ -125,9 +125,9 @@
 
           <!-- We're done with jobs, let's move on to schools -->
 
-          <section class="my-3 biography-section">
+          <section class="ojuju-header">
             <h2>Education</h2>
-            <ul class="ojuju-header">
+            <ul class="biography-list list-unstyled">
 
               <!-- Top item in education. And by "top", I mean a Bachelor in Creative Business at BUas. -->
               <li class="biography-item row mb-2">
@@ -176,7 +176,7 @@
         <aside class="col-md-5 col-lg-4 col-xl-3 resume-aside">
 
           <!-- The first block will be contact details -->
-          <section class="my-3 aside-section">
+          <section class="ojuju-header">
             <h2>Contact</h2>
             <!--
               A list of all your contact details.
@@ -214,7 +214,7 @@
 
           <!-- End of contact details, moving on to languages -->
 
-          <section class="my-3 aside-section">
+          <section class="ojuju-header">
             <h2>Languages</h2>
             <!-- Each item in the list is a language. Modify, add or remove depending on what you speak -->
             <ul class="language-list list-unstyled">
@@ -255,7 +255,7 @@
 
           <!-- End of contact details, moving on to other skills -->
 
-          <section class="my-3 aside-section">
+          <section class="ojuju-header">
             <h2>Other Skills</h2>
             <ul class="skill-list list-unstyled">
               <li class="skill-item">Radio hosting</li>
@@ -266,7 +266,7 @@
 
           <!-- End of other skills, moving on to interest and hobbies -->
 
-          <section class="my-3 aside-section">
+          <section class="ojuju-header">
             <h2>Interests &amp; Hobbies</h2>
             <ul class="skill-list list-unstyled">
               <li class="skill-item">Gamer</li>
