--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                   <h4>MailMan, POSTNL</h4>
                   <h5>February 2023&ndash;now</h5>
                   <!-- Use the list below to talk about your achievements -->
-                  <ul class="biography-details list-unstyled">
+                  <ul class="ojuju-link">
                     <li>Learnt how to bike on an eletrical cargo bike</li>
                     <li>Adapted to unfamiliar enviroments</li>
                     <li>Helps fund my studies at Breda University of Applied Sciences</li>
@@ -111,7 +111,7 @@
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
                   <h4>Stock Clerk, Kruidvat</h4>
                   <h5>June 2022&ndash;August 2022</h5>
-                  <ul class="biography-details list-unstyled">
+                  <ul class="ojuju-link">
                     <li>Learnt to be more organized</li>
                     <li>Further developed my dutch</li>
                     <li>Taught me the importance of money</li>
@@ -138,7 +138,7 @@
                   <h4>BA in Creative Business, Breda University of Applied Sciences</h4>
                   <h5>2022&nbsp;&ndash;&nbsp;now</h5>
                   <!-- Use the list below to talk about minors, exchanges, extra-curricular activities. -->
-                  <ul class="biography-details list-unstyled">
+                  <ul class="ojuju-link">
                     <li>2nd year student</li>
                     <li>Specializing in radio</li>
                     <li>Developing new skills</li>
@@ -154,7 +154,7 @@
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
                   <h4>IBCP Diploma, IGB International school</h4>
                   <h5>2015&nbsp;&ndash;&nbsp;2022</h5>
-                  <ul class="biography-details list-unstyled">
+                  <ul class="ojuju-link">
                     <li>Catered the study to the Creative Business</li>
                     <li>Developed self confidence</li>
                     <li>Focused on Economics</li>
@@ -184,7 +184,7 @@
               Be careful and only put channels through which you really want to be contacted.
               If your phone number is your personal one, you may want to remove it!
             -->
-            <ul class="contact-list list-unstyled">
+            <ul class="ojuju-link">
               <li class="contact-item">
                 <a class="d-flex align-items-center" href="mailto:220969@buas.nl" target="_blank">
                   <img class="contact-icon" src="images/icons/envelope.svg" alt="Email">
@@ -217,7 +217,7 @@
           <section class="ojuju-header">
             <h2>Languages</h2>
             <!-- Each item in the list is a language. Modify, add or remove depending on what you speak -->
-            <ul class="language-list list-unstyled">
+            <ul class="ojuju-rightsidetext">
               <li class="language-item d-flex mb-1">
                 <h5 class="language-name w-50">Dutch</h5>
                 <div class="language-level w-50 border border-info border-2 position-relative">
@@ -257,7 +257,7 @@
 
           <section class="ojuju-header">
             <h2>Other Skills</h2>
-            <ul class="skill-list list-unstyled">
+            <ul class="ojuju-rightsidetext">
               <li class="skill-item">Radio hosting</li>
               <li class="skill-item">Risk Taking</li>
               <li class="skill-item">Athletic</li>
@@ -268,7 +268,7 @@
 
           <section class="ojuju-header">
             <h2>Interests &amp; Hobbies</h2>
-            <ul class="skill-list list-unstyled">
+            <ul class="ojuju-rightsidetext">
               <li class="skill-item">Gamer</li>
               <li class="skill-item">Indie music connoisseur</li>
               <li class="skill-item">socializing</li>
